--- a/app/views/dashboard/_comments_lists.html.erb
+++ b/app/views/dashboard/_comments_lists.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <% comments.each do |c| %>
     <p>Comment from <%= c.system_ip%> at <%= c.comment_date_time %></p>
-    <p><%= c.description.html_safe %></p>
+    <p><%= sanitize_description(c.description) %></p>
     <hr>
   <% end %>
 </div>
